config(gradle) : asciidoctor 설정 변경 - asciidoctor 테스크 실행 시 'IllegalAccessError' 에러가 발생하였습니다. - 해당 에러는 sun.nio 패키지와 java.io 패키지의 대한 접근 권한이 없어 생기는 오류로 forkOptions 로 테스크 실행 시 jvm 옵션에서 접근 권한을 모두 해제하는 설정을 추가하였습니다. - asciidoctor 의존성을 testImplementation 에서 asciidoctorExtensions 로 변경하였습니다. - 기존 testImplementation 으로 사용 시, html 문서가 만들어지지만, snippet 파일을 정상적으로 출력하지 못하는 문제가 있었습니다. - 위 문제는 asciidoctor 의 기능을 사용하는 내용이 빠져있어 그런것으로 추정되어, 해당 설정을 변경하였습니다. - bootJar 테스크 실행 시 outputDir 에서 .adoc 파일을 읽어 온 후 BOOT-INF/classes/static/docs 경로에 저장을 했지만, 해당 경로는 불필요하다고 판단하여 설정에서 제거하였습니다.