@@ -3,7 +3,7 @@ plugins {
     id 'org.springframework.boot' version '3.0.5'
     id 'io.spring.dependency-management' version '1.1.0'
     id 'jacoco'
-    id 'org.asciidoctor.jvm.convert' version 'latest.release'
+    id 'org.asciidoctor.jvm.convert' version '3.3.2'
 }
 
 
@@ -12,6 +12,7 @@ version = '1.0.0'
 sourceCompatibility = '17'
 
 configurations {
+    asciidoctorExtensions
     compileOnly {
         extendsFrom annotationProcessor
     }
@@ -36,7 +37,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
-    testImplementation 'org.springframework.restdocs:spring-restdocs-asciidoctor'
+    asciidoctorExtensions 'org.springframework.restdocs:spring-restdocs-asciidoctor'
 }
 
 /*jacoco 설정*/
@@ -76,8 +77,14 @@ ext {
 }
 
 asciidoctor {
+    attributes 'snippets' : snippetsDir
+    configurations 'asciidoctorExtensions'
+    forkOptions {
+        jvmArgs('--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED','--add-opens','java.base/java.io=ALL-UNNAMED')
+    }
     dependsOn test
     inputs.dir snippetsDir
+    baseDirFollowsSourceFile()
 }
 
 asciidoctor.doFirst {
@@ -86,9 +93,8 @@ asciidoctor.doFirst {
 
 bootJar {
     dependsOn asciidoctor
-    copy {
-        from "${asciidoctor.outputDir}"
-        into 'BOOT-INF/classes/static/docs'
+    from("${asciidoctor.outputDir}/html5") {
+        into 'static/docs'
     }
 }
 
